--- a/Assets/UI Toolkit/hud.uxml
+++ b/Assets/UI Toolkit/hud.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement name="VisualElement" style="flex-grow: 1; height: 606px;">
         <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="hud" text="Let&apos;s fly!&#10;" style="font-size: 18px; -unity-font-style: bold; height: 452px; transform-origin: left top; width: 323px; position: absolute; left: 3px; top: 5px;" />
-        <ui:Label tabindex="-1" text="Press H to show commands&#10;Press X to remove this screen" parse-escape-sequences="true" display-tooltip-when-elided="true" name="help" style="height: 111px; -unity-text-align: upper-left; transform-origin: left bottom; width: 236px; position: absolute; top: 1%; left: auto; right: 0.5px; justify-content: flex-start;" />
+        <ui:Label tabindex="-1" text="Press H to show commands&#10;Press X to remove this screen&#10;Press R to restart, M to menu" parse-escape-sequences="true" display-tooltip-when-elided="true" name="help" style="height: 15%; -unity-text-align: upper-left; transform-origin: left bottom; width: 15%; position: absolute; top: 1%; left: auto; right: 0; justify-content: flex-start;" />
     </ui:VisualElement>
 </ui:UXML>
