--- a/Assets/UI Toolkit/hud.uxml
+++ b/Assets/UI Toolkit/hud.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement name="VisualElement" style="flex-grow: 1; height: 606px;">
-        <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="hud" text="Parameters&#10;" style="font-size: 18px; -unity-font-style: bold; height: 452px; transform-origin: left top; width: 323px; position: absolute; left: 1%; top: 1%;" />
-        <ui:Label tabindex="-1" text="Press H to show commands&#10;Press X to remove this screen&#10;Press R to restart, M to menu" parse-escape-sequences="true" display-tooltip-when-elided="true" name="help" style="height: 120px; -unity-text-align: lower-left; transform-origin: left bottom; width: 15%; position: absolute; top: auto; left: 1%; right: auto; justify-content: flex-start; bottom: 1%;" />
-        <ui:Label tabindex="-1" text="Heading&#10;" parse-escape-sequences="true" display-tooltip-when-elided="true" name="compass" style="position: absolute; top: auto; left: 45%; width: 10%; -unity-text-align: upper-center; font-size: 20px; -unity-font-style: bold; bottom: 1%;" />
+        <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="hud" text="Parameters&#10;" style="font-size: 18px; -unity-font-style: bold; height: 25%; transform-origin: left top; width: 15%; position: absolute; left: 1%; top: 1%;" />
+        <ui:Label tabindex="-1" text="Press H to show commands&#10;Press X to remove this screen&#10;Press R to restart, M to menu" parse-escape-sequences="true" display-tooltip-when-elided="true" name="help" style="height: auto; -unity-text-align: upper-right; transform-origin: left bottom; width: 15%; position: absolute; top: 1%; left: auto; right: 1%; justify-content: flex-start; bottom: auto;" />
+        <ui:Label tabindex="-1" text="Heading&#10;" parse-escape-sequences="true" display-tooltip-when-elided="true" name="compass" style="position: absolute; top: auto; left: 45%; width: 10%; -unity-text-align: upper-center; font-size: 20px; -unity-font-style: bold; bottom: auto;" />
     </ui:VisualElement>
 </ui:UXML>
